deploy: 823be567be61d39100b6bd92311c3e34e863e0c2

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h1 id="reveal-hugo">reveal-hugo</h1>
 
-<p>A Hugo theme for creating Reveal.js presentations.</p>
+<p>A Hugo theme for creating Reveal.js presentations, slide decks.</p>
 
 <p>~ made by <a href="https://dzello.com/">@dzello</a> ~
 on Aug 3, 2020</p>
